tools/kubernetes/es-statefulset-data.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: es-data
  labels:
    app: elasticsearch
    component: elasticsearch
spec:
  selector:
    matchLabels:
      component: elasticsearch
      role: data
  serviceName: es-transport
  replicas: 3
  template:
    metadata:
      labels:
        component: elasticsearch
        http: enabled
        role: data
    spec:
      securityContext:
        runAsUser: 1000720000
        fsGroup: 1000720000
      containers:
        - name: es-data
          image: luomus/elasticsearch:7.11.2
          imagePullPolicy: Always
          resources:
            requests:
              cpu: "0.1"
              memory: 3Gi
            limits:
              cpu: "0.5"
              memory: 3Gi
          ports:
            - containerPort: 9200
              name: http
            - containerPort: 9300
              name: transport
          livenessProbe:
            failureThreshold: 3
            initialDelaySeconds: 30
            periodSeconds: 60
            successThreshold: 1
            tcpSocket:
              port: transport
            timeoutSeconds: 3
          readinessProbe:
            failureThreshold: 3
            httpGet:
              path: /_cluster/health
              port: http
              scheme: HTTP
            initialDelaySeconds: 30
            periodSeconds: 60
            successThreshold: 1
            timeoutSeconds: 6
          volumeMounts:
            - name: storage
              mountPath: /usr/share/elasticsearch/data
  persistentVolumeClaimRetentionPolicy:
    whenDeleted: Retain
    whenScaled: Retain
  volumeClaimTemplates:
    - metadata:
        name: storage
        annotations:
          pv.beta.kubernetes.io/gid: "1000720000"
      spec:
        storageClassName: pomppa25-new
        accessModes: [ ReadWriteOnce ]
        resources:
          requests:
            storage: 50Gi
