tools/kubernetes/es-statefulset-master.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: es-master
  labels:
    app: elasticsearch
    component: elasticsearch
spec:
  selector:
    matchLabels:
      component: elasticsearch
      role: master
  serviceName: es-transport
  replicas: 3
  template:
    metadata:
      labels:
        component: elasticsearch
        http: disabled
        role: master
    spec:
      securityContext:
        runAsUser: 1000720000
        fsGroup: 1000720000
      containers:
        - name: es-master
          image: luomus/elasticsearch:7.11.2
          imagePullPolicy: Always
          resources:
            requests:
              cpu: "0.05"
              memory: 512Mi
            limits:
              cpu: "0.5"
              memory: 1Gi
          ports:
            - containerPort: 9200
              name: http
            - containerPort: 9300
              name: transport
          livenessProbe:
            failureThreshold: 3
            initialDelaySeconds: 30
            periodSeconds: 60
            successThreshold: 1
            tcpSocket:
              port: transport
            timeoutSeconds: 3
          volumeMounts:
            - name: storage
              mountPath: /usr/share/elasticsearch/data
  volumeClaimTemplates:
    - metadata:
        name: storage
        annotations:
          pv.beta.kubernetes.io/gid: "1000720000"
      spec:
        storageClassName: pomppa25
        accessModes: [ ReadWriteOnce ]
        resources:
          requests:
            storage: 1Gi
