tools/kubernetes/store-api-statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: store-api
  labels:
    app: store-api
    component: store-api
spec:
  selector:
    matchLabels:
      component: store-api
  serviceName: store-api
  replicas: 3
  template:
    metadata:
      labels:
        component: store-api
    spec:
      containers:
        - name: store-api
          image: >-
            image-registry.openshift-image-registry.svc:5000/lajistore-api/store-api
          imagePullPolicy: Always
          resources:
            requests:
              cpu: "0.1"
              memory: 500Mi
            limits:
              cpu: "0.5"
              memory: 2Gi
          ports:
            - containerPort: 3000
              name: http
              protocol: TCP
          livenessProbe:
            failureThreshold: 5
            httpGet:
              path: /status
              port: http
              scheme: HTTP
            initialDelaySeconds: 30
            periodSeconds: 30
            successThreshold: 1
            timeoutSeconds: 6
          readinessProbe:
            httpGet:
              path: /status
              port: http
              scheme: HTTP
            initialDelaySeconds: 30
            periodSeconds: 5
      restartPolicy: Always
      terminationGracePeriodSeconds: 60
      dnsPolicy: ClusterFirst
      securityContext: { }
  podManagementPolicy: OrderedReady
  updateStrategy:
    type: RollingUpdate
    rollingUpdate:
      partition: 0
  revisionHistoryLimit: 10
