tools/kubernetes/store-cli-statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: store-cli
  labels:
    app: store-cli
    component: store-cli
spec:
  selector:
    matchLabels:
      component: store-cli
  replicas: 1
  template:
    metadata:
      labels:
        component: store-cli
    spec:
      containers:
        - name: store-cli
          image: >-
            image-registry.openshift-image-registry.svc:5000/lajistore-api/store-cli
          imagePullPolicy: Always
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
      dnsPolicy: ClusterFirst
      securityContext: { }
  podManagementPolicy: OrderedReady
  updateStrategy:
    type: RollingUpdate
    rollingUpdate:
      partition: 0
  revisionHistoryLimit: 10
