tools/kubernetes/store-worker-statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: store-worker
  labels:
    app: store-worker
    component: store-worker
spec:
  selector:
    matchLabels:
      component: store-worker
  replicas: 3
  template:
    metadata:
      labels:
        component: store-worker
    spec:
      containers:
        - name: store-worker
          image: >-
            image-registry.openshift-image-registry.svc:5000/lajistore-api/store-worker
          imagePullPolicy: Always
          resources:
            requests:
              cpu: "0.1"
              memory: 500Mi
            limits:
              cpu: "0.5"
              memory: 2Gi
          ports:
            - containerPort: 3000
              name: http
              protocol: TCP
      restartPolicy: Always
      terminationGracePeriodSeconds: 10
      dnsPolicy: ClusterFirst
      securityContext: { }
  podManagementPolicy: OrderedReady
  updateStrategy:
    type: RollingUpdate
    rollingUpdate:
      partition: 0
  revisionHistoryLimit: 10
