tools/kubernetes/rabbitmq-service.yaml
kind: Service
apiVersion: v1
metadata:
  name: rabbitmq
  namespace: lajistore-api
  labels:
    application: rabbitmq
spec:
  ports:
    - name: http
      protocol: TCP
      port: 15672
      targetPort: 15672
    - name: amqp
      protocol: TCP
      port: 5672
      targetPort: 5672
    - name: prometheus
      protocol: TCP
      port: 15692
      targetPort: 15692
  selector:
    application: rabbitmq
