tools/kubernetes/store-api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: store-api
  labels:
    app: store-api
    component: store-api
spec:
  selector:
    component: store-api
  ports:
    - name: http
      port: 3000
      protocol: TCP
